force-app/main/default/objects/RE_Weekly_Data__c/RE_Weekly_Data__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>RE_Weekly_Data</label>
</CustomObject>