force-app/main/default/objects/RE_Weekly_Data__c/fields/RE_Month__c.field-meta.xml
<CustomField>
    <fullName>RE_Month__c</fullName>
    <label>Month</label>
    <length>10</length>
    <type>Text</type>
</CustomField>