force-app/main/default/objects/RE_Weekly_Data__c/fields/RE_Valid_To__c.field-meta.xml
<CustomField>
    <fullName>RE_Valid_To__c</fullName>
    <label>Valid To</label>
    <type>Date</type>
</CustomField>