force-app/main/default/objects/RE_Weekly_Data__c/fields/RE_Week_End_Date__c.field-meta.xml
<CustomField>
    <fullName>RE_Week_End_Date__c</fullName>
    <label>Week End Date</label>
    <type>Date</type>
</CustomField>