force-app/main/default/objects/RE_Weekly_Data__c/fields/RE_Week_Number__c.field-meta.xml
<CustomField>
    <fullName>RE_Week_Number__c</fullName>
    <label>Week Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>