force-app/main/default/objects/RE_Weekly_Data__c/fields/RE_Year__c.field-meta.xml
<CustomField>
    <fullName>RE_Year__c</fullName>
    <label>Year</label>
    <length>10</length>
    <type>Text</type>
</CustomField>