force-app/main/default/objects/RE_Weekly_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RE_Year__c</columns>
    <columns>RE_Month__c</columns>
    <columns>RE_Week_Number__c</columns>
    <columns>RE_Week_Start_Date__c</columns>
    <columns>RE_Week_End_Date__c</columns>
    <columns>RE_Valid_From__c</columns>
    <columns>RE_Valid_To__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>