force-app/main/default/objects/RE_Weekly_Data__c/listViews/som_test_view_2023.listView-meta.xml
<ListView>
    <fullName>som_test_view_2023</fullName>
    <columns>NAME</columns>
    <columns>RE_Year__c</columns>
    <columns>RE_Valid_From__c</columns>
    <columns>RE_Valid_To__c</columns>
    <columns>RE_Week_Start_Date__c</columns>
    <columns>RE_Week_End_Date__c</columns>
    <columns>RE_Week_Number__c</columns>
    <columns>RE_Month__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RE_Year__c</field>
        <operation>equals</operation>
        <value>2023</value>
    </filters>
    <label>som test view 2023</label>
    <language>en_US</language>
</ListView>