force-app/main/default/objects/RE_Weekly_Data__c/listViews/Weekly_data_2021.listView-meta.xml
<ListView>
    <fullName>Weekly_data_2021</fullName>
    <columns>NAME</columns>
    <columns>RE_Year__c</columns>
    <columns>RE_Month__c</columns>
    <columns>RE_Week_Number__c</columns>
    <columns>RE_Valid_From__c</columns>
    <columns>RE_Valid_To__c</columns>
    <columns>RE_Week_Start_Date__c</columns>
    <columns>RE_Week_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RE_Year__c</field>
        <operation>equals</operation>
        <value>2021</value>
    </filters>
    <label>Weekly data 2021</label>
    <language>en_US</language>
</ListView>